Updated Swagger.
OHM-1150: Create external identifier for questions
