# ohm/lumenapi/storage/api-docs/api-docs.json
@@ -290,6 +290,10 @@
                                     "questionSetId": {
                                         "type": "int"
                                     },
+                                    "externalId": {
+                                        "type": "string",
+                                        "format": "uuid"
+                                    },
                                     "seed": {
                                         "type": "int"
                                     },
@@ -315,6 +319,7 @@
                                 "type": "object",
                                 "example": {
                                     "questionSetId": 16208,
+                                    "externalId": "5c32d1f3-198f-4f00-b519-e6b5cc66291b",
                                     "seed": 8076,
                                     "rawScores": [],
                                     "partialAttemptNumber": [],
@@ -343,6 +348,11 @@
                                             "description": "Question Set Id of scored item",
                                             "type": "int"
                                         },
+                                        "externalId": {
+                                            "description": "External Question Id of scored item",
+                                            "type": "string",
+                                            "format": "uuid"
+                                        },
                                         "seed": {
                                             "description": "Seed of scored item",
                                             "type": "int"
@@ -369,6 +379,7 @@
                                         "summary": "",
                                         "value": {
                                             "questionSetId": 123,
+                                            "externalId": "5c32d1f3-198f-4f00-b519-e6b5cc66291b",
                                             "seed": 999,
                                             "html": "<div></div>",
                                             "jsparams": {
@@ -445,6 +456,10 @@
                                     "questionSetId": {
                                         "type": "int"
                                     },
+                                    "externalId": {
+                                        "type": "string",
+                                        "format": "uuid"
+                                    },
                                     "seed": {
                                         "type": "int"
                                     },
@@ -484,6 +499,7 @@
                                 "type": "object",
                                 "example": {
                                     "questionSetId": 16208,
+                                    "externalId": "5c32d1f3-198f-4f00-b519-e6b5cc66291b",
                                     "seed": 8076,
                                     "post": [
                                         {
@@ -518,6 +534,11 @@
                                         "questionSetId": {
                                             "description": "Question Set Id of scored item",
                                             "type": "int"
+                                        },
+                                        "externalId": {
+                                            "description": "External Question Id of scored item",
+                                            "type": "string",
+                                            "format": "uuid"
                                         },
                                         "questionType": {
                                             "description": "The question type (number, multans, etc)",
@@ -578,6 +599,7 @@
                                         "summary": "Single part - number",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "6953f40d-4d11-4dd6-a430-39cc7447c581",
                                             "questionType": "number",
                                             "seed": 482936,
                                             "scores": [
@@ -604,6 +626,7 @@
                                         "summary": "Single part - multiple choice",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "5c32d1f3-198f-4f00-b519-e6b5cc66291b",
                                             "questionType": "choices",
                                             "seed": 482936,
                                             "scores": [
@@ -630,6 +653,7 @@
                                         "summary": "Single part - multiple answer",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "679659b5-b206-488e-ad6a-d1af1c42ec99",
                                             "questionType": "multans",
                                             "seed": 482936,
                                             "scores": [
@@ -660,6 +684,7 @@
                                         "summary": "Single part - matching",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "09de1325-314e-45cb-ae1c-02b6f04b70a2",
                                             "questionType": "matching",
                                             "seed": 482936,
                                             "scores": [
@@ -693,6 +718,7 @@
                                         "summary": "Single part - string",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "b560b54d-d672-4a20-826e-e9e40df4eae0",
                                             "questionType": "string",
                                             "seed": 482936,
                                             "scores": [
@@ -719,6 +745,7 @@
                                         "summary": "Single part - draw",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "276bad3e-b9cf-4b0b-b484-f3b390b60e8c",
                                             "questionType": "draw",
                                             "seed": 482936,
                                             "scores": [
@@ -754,6 +781,7 @@
                                         "summary": "Single part - essay",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "3ce6876f-8258-4c2a-85a8-d4afe204120a",
                                             "questionType": "essay",
                                             "seed": 482936,
                                             "scores": [
@@ -780,6 +808,7 @@
                                         "summary": "Multi-part question",
                                         "value": {
                                             "questionSetId": 3618,
+                                            "externalId": "10dc9ad3-6d13-4633-ab05-a55734c2b33a",
                                             "questionType": "multipart",
                                             "seed": 482936,
                                             "scores": [
